--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Ye Dong / Personal"
+title                    : "Ye Dong"
 title_separator          : "-"
 name                     : &name "Ye Dong"
-description              : &description "personal description"
+description              : &description "Ph. D. student at IIE, CAS"
 url                      : https://ye-d.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Ye-D/Ye-D.github.io"
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Ye Dong"
-  avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  avatar           : "profile.jpg"
+  bio              : "Ph. D. student at IIE, CAS. Privacy-Preserving, MPC, Machine Learning."
   location         : "Beijing, CN"
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
@@ -255,7 +255,7 @@ sass:
 permalink: /:categories/:title/
 # paginate: 5 # amount of posts to show
 # paginate_path: /page:num/
-timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Asia/Shanghai # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins
