--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ye Dong"
+  name             : "Ye Dong (董业)"
   avatar           : "profile.jpg"
   bio              : "Ph. D. student at IIE, CAS. Privacy-Preserving, MPC, Machine Learning."
   location         : "Beijing, CN"
