--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,7 @@ main:
         
   - title: "Blog Posts"
     url: /year-archive/
+    More: "https://www.zhihu.com/column/c_1121838720017338368"
     
   - title: "CV"
     url: /cv/
