--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
     url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: "/files/CV_YeDong.pdf"
     
   - title: "Zhihu"
     url: "https://www.zhihu.com/column/c_1121838720017338368"
