--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Ye Dong (董业)"
   avatar           : "profile.jpg"
-  bio              : "Ph. D. student at IIE, CAS. Privacy-Preserving, MPC, Machine Learning."
+  bio              : "Ph. D. student at IIE, CAS. Privacy-Preserving, MPC, Machine Learning, and Federated Learning."
   location         : "Beijing, CN"
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
